# dirstuff

./: .coveragerc  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
dirstuff/: __init__.py
dirstuff/_cli/: main.py
dirstuff/cli/: cli.py
dirstuff/lib/: filter_criteria.py  memory_utilities.py  parser.py  tree.py
dirstuff/os/: __init__.py  _filesystem.py  filesystem.py
dirstuff/summary/: filter_criteria.py  memory_utilities.py  parser.py  tree.py
dirsum/: main.py  memory_utilties.py  summarizer.py  summary_tree.py
dirsum/cli/: cli.py
dirsum/lib/: filter_criteria.py  memory_utilities.py  parser.py  summarizer.py  summary_tree.py  tree.py
drivesum/: main.py  summarizer.py  summary_tree.py
tests/: test_version.py
tests/os/: test_dir.py  test_file.py  test_filesystem.py  test_path.py
tests/summary/: test_filter_criteria.py  test_memory_utilities.py
tests/utilities/: temp_utilities.py
